Add '26.1-snapshot-5' sources