@@ -24,20 +24,20 @@ public class PlayerSensor extends Sensor<LivingEntity> {
       return ImmutableSet.of(MemoryModuleType.NEAREST_PLAYERS, MemoryModuleType.NEAREST_VISIBLE_PLAYER, MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYER, MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYERS);
    }
 
-   protected void doTick(ServerLevel var1, LivingEntity var2) {
-      Stream var10000 = var1.players().stream().filter(EntitySelector.NO_SPECTATORS).filter((var2x) -> var2.closerThan(var2x, this.getFollowDistance(var2)));
-      Objects.requireNonNull(var2);
-      List var3 = (List)var10000.sorted(Comparator.comparingDouble(var2::distanceToSqr)).collect(Collectors.toList());
-      Brain var4 = var2.getBrain();
-      var4.setMemory(MemoryModuleType.NEAREST_PLAYERS, var3);
-      List var5 = (List)var3.stream().filter((var2x) -> isEntityTargetable(var1, var2, var2x)).collect(Collectors.toList());
-      var4.setMemory(MemoryModuleType.NEAREST_VISIBLE_PLAYER, var5.isEmpty() ? null : (Player)var5.get(0));
-      List var6 = var5.stream().filter((var2x) -> isEntityAttackable(var1, var2, var2x)).toList();
-      var4.setMemory(MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYERS, var6);
-      var4.setMemory(MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYER, var6.isEmpty() ? null : (Player)var6.get(0));
+   protected void doTick(final ServerLevel level, final LivingEntity body) {
+      Stream var10000 = level.players().stream().filter(EntitySelector.NO_SPECTATORS).filter((player) -> body.closerThan(player, this.getFollowDistance(body)));
+      Objects.requireNonNull(body);
+      List<Player> players = (List)var10000.sorted(Comparator.comparingDouble(body::distanceToSqr)).collect(Collectors.toList());
+      Brain<?> brain = body.getBrain();
+      brain.setMemory(MemoryModuleType.NEAREST_PLAYERS, players);
+      List<Player> visiblePlayers = (List)players.stream().filter((livingEntity) -> isEntityTargetable(level, body, livingEntity)).collect(Collectors.toList());
+      brain.setMemory(MemoryModuleType.NEAREST_VISIBLE_PLAYER, visiblePlayers.isEmpty() ? null : (Player)visiblePlayers.get(0));
+      List<Player> visibleAttackablePlayers = visiblePlayers.stream().filter((livingEntity) -> isEntityAttackable(level, body, livingEntity)).toList();
+      brain.setMemory(MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYERS, visibleAttackablePlayers);
+      brain.setMemory(MemoryModuleType.NEAREST_VISIBLE_ATTACKABLE_PLAYER, visibleAttackablePlayers.isEmpty() ? null : (Player)visibleAttackablePlayers.get(0));
    }
 
-   protected double getFollowDistance(LivingEntity var1) {
-      return var1.getAttributeValue(Attributes.FOLLOW_RANGE);
+   protected double getFollowDistance(final LivingEntity body) {
+      return body.getAttributeValue(Attributes.FOLLOW_RANGE);
    }
 }
